--- a/HardwareStoreDemo/HardwareStore/appsettings.json
+++ b/HardwareStoreDemo/HardwareStore/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "default": ""
+    "default": "Data Source=U20210476;Initial Catalog=HardwareStoreDB;Integrated Security=True;Encrypt=False"
   }
 }
