added mailkit and method to send Email for Sale

--- a/HardwareStoreDemo/HardwareStore/appsettings.json
+++ b/HardwareStoreDemo/HardwareStore/appsettings.json
@@ -8,5 +8,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "default": "Data Source=U20210476;Initial Catalog=HardwareStoreDB;Integrated Security=True;Encrypt=False"
+  },
+  "Mailtrap": {
+    "Host": "sandbox.smtp.mailtrap.io",
+    "Port": 587,
+    "Username": "b2e9684ae73ea6",
+    "Password": "cde6c4850a41ab",
+    "EmailFrom": "HardwareStore@no-reply.com",
+    "EmailUsername": "Hardware Store"
   }
 }
