--- a/HardwareStoreDemo/HardwareStore/appsettings.json
+++ b/HardwareStoreDemo/HardwareStore/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "default": "Data Source=U20210476;Initial Catalog=HardwareStoreDB;Integrated Security=True;Encrypt=False"
+    "default": "Data Source=DESKTOP-9N00BC4\\SQLEXPRESS;Initial Catalog=HardwareStoreDB;Integrated Security=True;Encrypt=False"
   },
   "Mailtrap": {
     "Host": "sandbox.smtp.mailtrap.io",
