--- a/HardwareStoreDemo/HardwareStore/appsettings.json
+++ b/HardwareStoreDemo/HardwareStore/appsettings.json
@@ -14,7 +14,7 @@
     "Port": 587,
     "Username": "b2e9684ae73ea6",
     "Password": "cde6c4850a41ab",
-    "EmailFrom": "HardwareStore@no-reply.com",
-    "EmailUsername": "Hardware Store"
+    "EmailFrom": "FerreteriaElMaestro@no-reply.com",
+    "EmailUsername": "Ferreteria 'El Maestro'"
   }
 }
