--- a/HardwareStoreDemo/HardwareStore/appsettings.json
+++ b/HardwareStoreDemo/HardwareStore/appsettings.json
@@ -6,9 +6,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "default": "Data Source=U20210476;Initial Catalog=HardwareStoreDB;Integrated Security=True;Encrypt=False"
-  },
+    "ConnectionStrings": {
+        "default": "Data Source=DESKTOP-F4AGAE7\\U20210127;Initial Catalog=HardwareStoreDB;Integrated Security=True;Encrypt=False"
+    },
   "Mailtrap": {
     "Host": "sandbox.smtp.mailtrap.io",
     "Port": 587,
